2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=366284#5
	* rc.c (init_rc): check config_file is NULL or not.
	(panel_set_option): check config_file instead of no_rc_dir.

2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=261174#10
	* terms.c (graph_ok): check UseGraphicChar is GRAPHIC_CHAR_ALL or not.
	* symbol.c (get_symbol): check UseGraphicChar.
	* rc.c (graphic_char_str): added.
	* main.c (sig_chld): use GRAPHIC_CHAR_ASCII and GRAPHIC_CHAR_ALL.
	* fm.h (GRAPHIC_CHAR_ASCII, GRAPHIC_CHAR_CHARSET, GRAPHIC_CHAR_ALL): added.
	* fm.h: UseGraphicChar is initialized as GRAPHIC_CHAR_ASCII.

2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=185006#22
	* main.c (sig_chld): save exit code to d->err.
	(addDownloadList): initialize d->running and d->err.
	(DownloadListBuffer): check d->err.

	* fm.h (_DownloadList): add running and err.

	* file.c (save2tmp): check returned value of Strfputs().
	(doFileSave): exit code is depend on the returned value of save2tmp().

2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04238] [patch] simple preserve space
	* rc.c: Introduce option simple_preserve_space.
	* fm.h: add global variable SimplePreserveSpace.
	* file.c (HTMLlineproc0): check SimplePreserveSpace.

2010-07-18 d+w3m@vdr.jp

	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=242599#21
	* file.c (is_html_type): added.
	(examineFile, loadGeneralFile, _saveBuffer)
	(openGeneralPagerBuffer, reloadBuffer): use is_html_type() instead
	of strcasecmp().
	(loadGeneralFile): set f.guess_tupe
	* display.c (displayBuffer): use is_html_type() instead of strcasecmp().
	* buffer.c (reshapeBuffer): use is_html_type() instead of strcasecmp().